--- a/JRS/src/main/webapp/livro.xhtml
+++ b/JRS/src/main/webapp/livro.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 
 
@@ -20,10 +21,20 @@
 			<h:inputText id="preço" value="#{livroBean.livro.preco}"/>
 			<h:outputLabel value="Data  de Lançamento :" for="DataDeLançamento" />
 			<h:inputText id="DataDeLançamento" value= "#{livroBean.livro.datalancamento}"/>
-			<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
 			</h:panelGrid>
 
 		</fieldset>
+		<fieldset>
+			<legend>Dados do autor</legend>
+				<h:outputLabel value="Selecione autor: " for="autor"/>
+				<h:selectOneMenu>
+					<f:selectItems value ="#{livroBean.autores}" var="autor" itemLabel="#{autor.nome}"
+					itemValue="#{autor.idAutor}"/>
+					
+				</h:selectOneMenu>
+				<h:commandButton value="Gravar Autor"/>
+		</fieldset>
+		<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
 
 
 	</h:form>
