--- a/JRS/src/main/webapp/livro.xhtml
+++ b/JRS/src/main/webapp/livro.xhtml
@@ -5,45 +5,98 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 
-
+<h:head />
 
 <h:body>
 	<h1>Novo Livro</h1>
 	<h:form>
+		<h:messages id="messages" />
 		<fieldset>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
-			<h:outputLabel value="Titulo:" for="titulo" />
-			<h:inputText id="titulo" value="#{livroBean.livro.titulo}"/>
-			<h:outputLabel value="ISBN :" for="isbn" />
-			<h:inputText id="isbn" value="#{livroBean.livro.isbn}" />
-			<h:outputLabel value="PREÇO :" for="preço" />
-			<h:inputText id="preço" value="#{livroBean.livro.preco}"/>
-			<h:outputLabel value="Data  de Lançamento :" for="DataDeLançamento" />
-			<h:inputText id="DataDeLançamento" value= "#{livroBean.livro.datalancamento}"/>
+				<h:outputLabel value="Titulo:" for="titulo" />
+				<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
+					required="true"
+					requiredMessage="É necessario informar o titulo do livro!"
+					validatorMessage="Titulo não pode ser superior a 50 caracteres!">
+					<f:validateLength maximum="50" />
+					<f:ajax event="blur" render="messages"/>
+				</h:inputText>
+				<h:outputLabel value="ISBN :" for="isbn" />
+				<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
+					validator="#{livroBean.comecaComDigitoUm}" />
+				<h:outputLabel value="PREÇO :" for="preço" />
+				<h:inputText id="preço" value="#{livroBean.livro.preco}"
+					required="true" requiredMessage="É necessario informar o preço!" />
+				<h:outputLabel value="Data  de Lançamento :" for="DataDeLançamento" />
+				<h:inputText id="DataDeLançamento"
+					value="#{livroBean.livro.datalancamento.time}">
+					<f:convertDateTime pattern="dd/MM/yyyy"
+						timeZone="America/Sao_Paulo"></f:convertDateTime>
+				</h:inputText>
 			</h:panelGrid>
 
 		</fieldset>
 		<fieldset>
 			<legend>Dados do autor</legend>
-				<h:outputLabel value="Selecione autor: " for="autor"/>
-				<h:selectOneMenu value="#{livroBean.autorID}">
-					<f:selectItems value ="#{livroBean.autores}" var="autor" itemLabel="#{autor.nome}"
-					itemValue="#{autor.idAutor}"/>					
-				</h:selectOneMenu>
-				<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}"/>
-				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
-					<h:column>
-						<h:outputText value="#{autor.nome}"/>						
-					</h:column>	
-				 </h:dataTable>
-				
-				
-		</fieldset>
-		<h:commandButton value="Gravar" action="#{livroBean.gravar}"/>
+			<h:outputLabel value="Selecione autor: " for="autor" />
+			<h:selectOneMenu value="#{livroBean.autorID}" id="autor">
+				<f:selectItems value="#{livroBean.autores}" var="autor"
+					itemLabel="#{autor.nome}" itemValue="#{autor.idAutor}" />
+			</h:selectOneMenu>
+			<h:commandButton value="Gravar Autor"
+				action="#{livroBean.gravarAutor}">
+				<f:ajax execute="autor" render="tabelaAutores" />
+			</h:commandButton>
 
+			<br/>
+			<h:commandLink value="Cadastrar novo autor" action="#{livroBean.formAutor}" immediate="true"></h:commandLink>
 
+			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="tabelaAutores">
+				<h:column>
+					<h:outputText value="#{autor.nome}" />
+				</h:column>
+			</h:dataTable>
+			
+		</fieldset>		
+		<h:commandButton value="Gravar" action="#{livroBean.gravar}">
+			 <f:ajax execute="@form" render="@form :tabelaLivros"/>
+		</h:commandButton>
 	</h:form>
+
+
+	<fieldset>
+		<h:dataTable id="tabelaLivros" value="#{livroBean.livros}" var="livro"   >
+
+			<h:column>
+				<f:facet name="header">Titulo</f:facet>
+				<h:outputText value="#{livro.titulo}" />
+			</h:column>
+
+			<h:column>
+				<f:facet name="header">ISBN</f:facet>
+				<h:outputText value="#{livro.isbn}" />
+			</h:column>
+
+			<h:column>
+				<f:facet name="header">Preço</f:facet>
+				<h:outputText value="#{livro.preco}" />
+			</h:column>
+			<h:column>
+				<f:facet name="header">Data</f:facet>
+				<h:outputText value="" />
+			</h:column>
+
+
+
+		</h:dataTable>
+
+	</fieldset>
+
+
+
+
+
 
 
 
