--- a/JRS/src/main/webapp/autor.xhtml
+++ b/JRS/src/main/webapp/autor.xhtml
@@ -28,6 +28,36 @@
 			</fieldset>
 		</h:form>
 
+		<h:form id="formTabelaAutores">
+			<fieldset>
+				<h:dataTable id="tabelaAutores" value="#{autorBeans.autores}"
+					var="autor">
+					<h:column>
+						<f:facet name="header">Nome do autor</f:facet>
+						<h:outputText value="#{autor.nome}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Alterar</f:facet>
+						<h:commandLink value="alterar"
+							action="#{autorBeans.alterar(autor)}" />
+					</h:column>
+
+					<h:column>
+						<f:facet name="header">Remover</f:facet>
+						<h:commandLink value="remover"
+							action="#{autorBeans.remover(autor)}" />
+					</h:column>
+				</h:dataTable>
+			</fieldset>
+		</h:form>
+
+
+
+
+
+
+
+
 	</ui:define>
 </ui:composition>
 
