--- a/JRS/src/main/webapp/livro.xhtml
+++ b/JRS/src/main/webapp/livro.xhtml
@@ -61,6 +61,10 @@
 					<h:column>
 						<h:outputText value="#{autor.nome}" />
 					</h:column>
+					<h:column>
+						<h:commandLink value="X"
+							action="#{livroBean.removerAutorDolivro(autor)}" />
+					</h:column>
 				</h:dataTable>
 
 			</fieldset>
@@ -98,6 +102,7 @@
 						<h:commandLink value="alterar"
 							action="#{livroBean.alterar(livro)}" />
 					</h:column>
+
 					<h:column>
 						<f:facet name="header">Remover</f:facet>
 						<h:commandLink value="remover"
