Adicionando nome do usuario logado a sessão

--- a/JRS/src/main/webapp/_template.xhtml
+++ b/JRS/src/main/webapp/_template.xhtml
@@ -17,7 +17,10 @@
 		<h1>
 			<ui:insert name="titulo"></ui:insert>
 		</h1>
-
+		<h3>
+			<h:outputText value="usuario logado: " />
+			<h:outputText value="#{sessionScope['usuarioLogado'].email}" />
+		</h3>
 	</div>
 	<div id="conteudo">
 		<ui:insert name="conteudo">
