--- a/JRS/src/main/webapp/login.xhtml
+++ b/JRS/src/main/webapp/login.xhtml
@@ -24,8 +24,9 @@
 						requiredMessage="É necessario informar o login do usuario!">
 						<f:passThroughAttribute name="type" value="email"></f:passThroughAttribute>
 					</h:inputText>
+					
 
-					<h:outputText value="Senha" for="senha" />
+					<h:outputLabel value="Senha" for="senha" />
 					<h:inputSecret id="senha" value="#{loginBean.usuario.senha}"
 						required="true" requiredMessage="Informe sua senha para efetuar o login!">
 						<f:passThroughAttribute name="type" value="password"></f:passThroughAttribute>
