--- a/JRS/src/main/webapp/login.xhtml
+++ b/JRS/src/main/webapp/login.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="_template.xhtml">
@@ -12,21 +13,22 @@
 		Login
 	</ui:define>
 	<ui:define name="conteudo">
+	
+	
 		<h:form id="login">
 			<h:messages />
-			<fieldset>
-				<legend>Informe os dados de login do seu usuario</legend>
+			<p:fieldset legend="Digite os dados para login">				
 				<h:panelGrid columns="2">
 
-					<h:outputLabel value="Email:" for="email" />
-					<h:inputText id="email" value="#{loginBean.usuario.email}"
+					<p:outputLabel value="Email:" for="email" />
+					<p:inputText id="email" value="#{loginBean.usuario.email}"
 						required="true"
 						requiredMessage="É necessario informar o login do usuario!">
 						<f:passThroughAttribute name="type" value="email"></f:passThroughAttribute>
-					</h:inputText>
+					</p:inputText>
 					
 
-					<h:outputLabel value="Senha" for="senha" />
+					<p:outputLabel value="Senha" for="senha" />
 					<h:inputSecret id="senha" value="#{loginBean.usuario.senha}"
 						required="true" requiredMessage="Informe sua senha para efetuar o login!">
 						<f:passThroughAttribute name="type" value="password"></f:passThroughAttribute>
@@ -37,7 +39,7 @@
 					<h:commandButton value="Logar" action="#{loginBean.logar}" />
 					<h:commandButton value="Cadastrar" action="#{loginBean.cadastrar}"  />
 				</h:panelGrid>
-			</fieldset>
+			</p:fieldset>
 		</h:form>
 
 
