--- a/JRS/src/main/webapp/_template.xhtml
+++ b/JRS/src/main/webapp/_template.xhtml
@@ -4,22 +4,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 
 <h:head />
 
 
-
 <h:body>
 	<div id="cabecalho">
 		<h:graphicImage library="img" name="logo.png" />
 		<h:form rendered="#{usuarioLogado != null}">
-			<h:commandButton value="Logout" action="#{loginBean.deslogar}" />
-		
-				<h:outputText value="  usuario logado: " />
-				<h:outputText value="#{sessionScope['usuarioLogado'].email}" />
-		
+			<p:outputLabel value="  Usuario logado: " />
+			<p:outputLabel value="#{sessionScope['usuarioLogado'].email}" />
+
+			<p:commandButton value="Logout" action="#{loginBean.deslogar}"
+				icon="pi pi-times" styleClass="rounded-button ui-button-danger"
+				style="float:right"></p:commandButton>
+
+
+
 		</h:form>
 
 		<h1>
