--- a/JRS/src/main/webapp/livro.xhtml
+++ b/JRS/src/main/webapp/livro.xhtml
@@ -4,114 +4,135 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="_template.xhtml">
 	<ui:define name="titulo">
-		Novo Livro
+		<p:outputPanel>Novo Livro</p:outputPanel>
 	</ui:define>
 	<ui:define name="conteudo">
 
-		<h:form>
-			<h:messages id="messages" />
-			<fieldset>
-				<legend>Dados do Livro</legend>
-				<h:panelGrid columns="2">
-					<h:outputLabel value="Titulo:" for="titulo" />
-					<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
+		<h:form id="formLivros">
+			<p:messages id="messages" />
+			<p:fieldset legend="Dados do livro">
+				<p:panelGrid columns="2">
+
+					<p:outputLabel value="Titulo:" for="titulo" />
+					<p:inputText id="titulo" value="#{livroBean.livro.titulo}"
 						required="true"
 						requiredMessage="É necessario informar o titulo do livro!"
 						validatorMessage="Titulo não pode ser superior a 50 caracteres!">
 						<f:validateLength maximum="50" />
 						<f:ajax event="blur" render="messages" />
-					</h:inputText>
-					<h:outputLabel value="ISBN :" for="isbn" />
-					<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
+					</p:inputText>
+
+					<p:outputLabel value="ISBN :" for="isbn" />
+					<p:inputMask id="isbn" value="#{livroBean.livro.isbn}"
+						mask="999-9-99-999999-9"
 						validator="#{livroBean.comecaComDigitoUm}" />
-					<h:outputLabel value="PREÇO :" for="preço" />
-					<h:inputText id="preço" value="#{livroBean.livro.preco}"
-						required="true" requiredMessage="É necessario informar o preço!" />
-					<h:outputLabel value="Data  de Lançamento :" for="DataDeLançamento" />
-					<h:inputText id="DataDeLançamento"
-						value="#{livroBean.livro.datalancamento.time}">
-						<f:convertDateTime pattern="dd/MM/yyyy"
-							timeZone="America/Sao_Paulo"></f:convertDateTime>
-					</h:inputText>
-				</h:panelGrid>
 
-			</fieldset>
-			<fieldset>
-				<legend>Dados do autor</legend>
-				<h:outputLabel value="Selecione autor: " for="autor" />
-				<h:selectOneMenu value="#{livroBean.autorID}" id="autor">
-					<f:selectItems value="#{livroBean.autores}" var="autor"
-						itemLabel="#{autor.nome}" itemValue="#{autor.idAutor}" />
-				</h:selectOneMenu>
-				<h:commandButton value="Gravar Autor"
-					action="#{livroBean.gravarAutor}">
-					<f:ajax execute="autor" render="tabelaAutores" />
-				</h:commandButton>
+					<p:outputLabel value="PREÇO :" for="preço" />
+					<p:inputNumber id="preço" value="#{livroBean.livro.preco}"
+						symbol=" R$" symbolPosition="s" decimalSeparator=","
+						thousandSeparator="." required="true"
+						requiredMessage="É necessario informar o preço!" />
 
+					<p:outputLabel value="Data  de Lançamento :" for="DataDeLançamento" />
+					<p:datePicker id="DataDeLançamento"
+						value="#{livroBean.livro.datalancamento.time}" mask="99/99/9999">
+					</p:datePicker>
+				</p:panelGrid>
+			</p:fieldset>
+
+
+
+			<p:fieldset legend="Dados do autor">
+				<p:panelGrid columns="4">
+					<p:outputLabel value="Selecione autor: " for="autor" />
+					<p:selectOneMenu value="#{livroBean.autorID}" id="autor">
+						<f:selectItems value="#{livroBean.autores}" var="autor"
+							itemLabel="#{autor.nome}" itemValue="#{autor.idAutor}" />
+					</p:selectOneMenu>
+					<p:commandButton value="Gravar Autor"
+						action="#{livroBean.gravarAutor}" process="@this autor"
+						update="tabelaAutores">
+						<f:ajax execute="autor" render="tabelaAutores" />
+					</p:commandButton>
+
+					<p:commandLink value="Cadastrar novo autor"
+						action="#{livroBean.formAutor}" immediate="true"
+						update="tabelaAutores" process="@this"></p:commandLink>
+					<p:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
+						id="tabelaAutores">
+						<p:column>
+							<p:outputLabel value="#{autor.nome}" />
+						</p:column>
+						<p:column>
+							<p:commandButton value="Remover"
+								action="#{livroBean.removerAutorDolivro(autor)}"
+								process="tabelaAutores" update="tabelaAutores" />
+						</p:column>
+					</p:dataTable>
+				</p:panelGrid>
 				<br />
-				<h:commandLink value="Cadastrar novo autor"
-					action="#{livroBean.formAutor}" immediate="true"></h:commandLink>
 
-				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
-					id="tabelaAutores">
-					<h:column>
-						<h:outputText value="#{autor.nome}" />
-					</h:column>
-					<h:column>
-						<h:commandLink value="X"
-							action="#{livroBean.removerAutorDolivro(autor)}" />
-					</h:column>
-				</h:dataTable>
-
-			</fieldset>
-			<h:commandButton value="Gravar" action="#{livroBean.gravar}">
+			</p:fieldset>
+			<p:commandButton value="Gravar" action="#{livroBean.gravar}">
 				<f:ajax execute="@form"
-					render="@form :formTabelaLivros:tabelaLivros" />
-			</h:commandButton>
+					render="@form :formTabelaLivros:tabelaLivros" update="@form" />
+			</p:commandButton>
 		</h:form>
 
 		<h:form id="formTabelaLivros">
-			<fieldset>
-				<h:dataTable id="tabelaLivros" value="#{livroBean.livros}"
-					var="livro">
+			<p:fieldset>
+				<p:dataTable id="tabelaLivros" value="#{livroBean.livros}"
+					var="livro" paginator="true" rows="5" >
 
-					<h:column>
+					<p:column headerText="titulo" sortBy="#{livro.titulo}">
 						<f:facet name="header">Titulo</f:facet>
-						<h:outputText value="#{livro.titulo}" />
-					</h:column>
+						<p:outputLabel value="#{livro.titulo}" />
+					</p:column>
 
-					<h:column>
+					<p:column headerText="isbn" sortBy="#{livro.isbn}">
 						<f:facet name="header">ISBN</f:facet>
-						<h:outputText value="#{livro.isbn}" />
-					</h:column>
+						<p:outputLabel value="#{livro.isbn}" />
+					</p:column>
 
-					<h:column>
+					<p:column headerText="preco" sortBy="#{livro.preco}">
 						<f:facet name="header">Preço</f:facet>
-						<h:outputText value="#{livro.preco}" />
-					</h:column>
-					<h:column>
+						<p:outputLabel value="R$ #{livro.preco}" />
+					</p:column>
+					<p:column headerText="datalancamento" sortBy="#{livro.datalancamento}">
 						<f:facet name="header">Data</f:facet>
-						<h:outputText value="" />
-					</h:column>
-					<h:column>
+						<p:outputLabel value="#{livro.datalancamento}" />
+					</p:column>
+					<p:column >
 						<f:facet name="header">Alterar</f:facet>
-						<h:commandLink value="alterar"
+						<p:commandButton id="alterarLivro" icon="pi pi-pencil"
+							process="@this formLivros" update="@this formLivros"
 							action="#{livroBean.alterar(livro)}" />
-					</h:column>
+					</p:column>
 
-					<h:column>
+					<p:column>
 						<f:facet name="header">Remover</f:facet>
-						<h:commandLink value="remover"
-							action="#{livroBean.remover(livro)}" />
-					</h:column>
+						<p:commandButton id="removerLivro"
+							class="ui-button-warning rounded-button" icon="pi pi-trash"
+							process="@form" oncomplete="PF('deleteBookDialog').show()" />
 
-				</h:dataTable>
-
-			</fieldset>
+						<p:confirmDialog widgetVar="deleteBookDialog" showEffect="fade"
+							width="300" message="Remover livro?" header="Confirm"
+							severity="warn">
+							<p:commandButton value="Yes" icon="pi pi-check"
+								action="#{livroBean.remover(livro)}" process="@this"
+								update="@form" onclick="PF('deleteBookDialog').hide()" />
+							<p:commandButton value="No" type="button"
+								styleClass="ui-button-secondary" icon="pi pi-times"
+								onclick="PF('deleteBookDialog').hide()" />
+						</p:confirmDialog>
+					</p:column>
+				</p:dataTable>
+			</p:fieldset>
 		</h:form>
 
 
