--- a/JRS/src/main/webapp/megamenu.xhtml
+++ b/JRS/src/main/webapp/megamenu.xhtml
@@ -16,230 +16,154 @@
 	<ui:define name="conteudo">
 
 		<div class="card">
-    <h:form>
-        <h5>Horizontal</h5>
-        <p:megaMenu orientation="horizontal" autoDisplay="false">
-            <p:submenu label="Videos" icon="pi pi-fw pi-video">
-                <p:column>
-                    <p:submenu label="Video 1">
-                        <p:menuitem value="Video 1.1"/>
-                        <p:menuitem value="Video 1.2"/>
-                    </p:submenu>
-                    <p:submenu label="Video 2">
-                        <p:menuitem value="Video 2.1"/>
-                        <p:menuitem value="Video 2.2"/>
-                    </p:submenu>
-                </p:column>
+			<h:form>
+				<h5>Horizontal</h5>
+				<p:megaMenu orientation="horizontal" autoDisplay="false">
+					<p:submenu label="Videos" icon="pi pi-fw pi-video">
+						<p:column>
+							<p:submenu label="Video 1">
+								<p:menuitem value="Video 1.1" />
+								<p:menuitem value="Video 1.2" />
+							</p:submenu>
+							<p:submenu label="Video 2">
+								<p:menuitem value="Video 2.1" />
+								<p:menuitem value="Video 2.2" />
+							</p:submenu>
+						</p:column>
 
-                <p:column>
-                    <p:submenu label="Video 3">
-                        <p:menuitem value="Video 3.1"/>
-                        <p:menuitem value="Video 3.2"/>
-                    </p:submenu>
-                    <p:submenu label="Video 4">
-                        <p:menuitem value="Video 4.1"/>
-                        <p:menuitem value="Video 4.2"/>
-                    </p:submenu>
-                </p:column>
-            </p:submenu>
+						<p:column>
+							<p:submenu label="Video 3">
+								<p:menuitem value="Video 3.1" />
+								<p:menuitem value="Video 3.2" />
+							</p:submenu>
+							<p:submenu label="Video 4">
+								<p:menuitem value="Video 4.1" />
+								<p:menuitem value="Video 4.2" />
+							</p:submenu>
+						</p:column>
+					</p:submenu>
 
-            <p:submenu label="Users" icon="pi pi-fw pi-users">
+					<p:submenu label="Users" icon="pi pi-fw pi-users">
 
-                <p:column>
-                    <p:submenu label="User 1">
-                        <p:menuitem value="User 1.1"/>
-                        <p:menuitem value="User 1.2"/>
-                    </p:submenu>
-                    <p:submenu label="User 2">
-                        <p:menuitem value="User 2.1"/>
-                        <p:menuitem value="User 2.2"/>
-                    </p:submenu>
-                </p:column>
+						<p:column>
+							<p:submenu label="User 1">
+								<p:menuitem value="User 1.1" />
+								<p:menuitem value="User 1.2" />
+							</p:submenu>
+							<p:submenu label="User 2">
+								<p:menuitem value="User 2.1" />
+								<p:menuitem value="User 2.2" />
+							</p:submenu>
+						</p:column>
 
-                <p:column>
-                    <p:submenu label="User 3">
-                        <p:menuitem value="User 3.1"/>
-                        <p:menuitem value="User 3.2"/>
-                    </p:submenu>
-                    <p:submenu label="User 4">
-                        <p:menuitem value="User 4.1"/>
-                        <p:menuitem value="User 4.2"/>
-                    </p:submenu>
-                </p:column>
-                <p:column>
-                    <p:submenu label="User 5">
-                        <p:menuitem value="User 5.1"/>
-                        <p:menuitem value="User 5.2"/>
-                    </p:submenu>
-                    <p:submenu label="User 6">
-                        <p:menuitem value="User 6.1"/>
-                        <p:menuitem value="User 6.2"/>
-                    </p:submenu>
-                </p:column>
-            </p:submenu>
+						<p:column>
+							<p:submenu label="User 3">
+								<p:menuitem value="User 3.1" />
+								<p:menuitem value="User 3.2" />
+							</p:submenu>
+							<p:submenu label="User 4">
+								<p:menuitem value="User 4.1" />
+								<p:menuitem value="User 4.2" />
+							</p:submenu>
+						</p:column>
+						<p:column>
+							<p:submenu label="User 5">
+								<p:menuitem value="User 5.1" />
+								<p:menuitem value="User 5.2" />
+							</p:submenu>
+							<p:submenu label="User 6">
+								<p:menuitem value="User 6.1" />
+								<p:menuitem value="User 6.2" />
+							</p:submenu>
+						</p:column>
+					</p:submenu>
 
-            <p:submenu label="Events" icon="pi pi-fw pi-calendar">
-                <p:column>
-                    <p:submenu label="Event 1">
-                        <p:menuitem value="Event 1.1"/>
-                        <p:menuitem value="Event 1.2"/>
-                    </p:submenu>
-                    <p:submenu label="Event 2">
-                        <p:menuitem value="Event 2.1"/>
-                        <p:menuitem value="Event 2.2"/>
-                    </p:submenu>
-                </p:column>
+					<p:submenu label="Events" icon="pi pi-fw pi-calendar">
+						<p:column>
+							<p:submenu label="Event 1">
+								<p:menuitem value="Event 1.1" />
+								<p:menuitem value="Event 1.2" />
+							</p:submenu>
+							<p:submenu label="Event 2">
+								<p:menuitem value="Event 2.1" />
+								<p:menuitem value="Event 2.2" />
+							</p:submenu>
+						</p:column>
 
-                <p:column>
-                    <p:submenu label="Event 3">
-                        <p:menuitem value="Event 3.1"/>
-                        <p:menuitem value="Event 3.2"/>
-                    </p:submenu>
-                    <p:submenu label="Event 4">
-                        <p:menuitem value="Event 4.1"/>
-                        <p:menuitem value="Event 4.2"/>
-                    </p:submenu>
-                </p:column>
-            </p:submenu>
+						<p:column>
+							<p:submenu label="Event 3">
+								<p:menuitem value="Event 3.1" />
+								<p:menuitem value="Event 3.2" />
+							</p:submenu>
+							<p:submenu label="Event 4">
+								<p:menuitem value="Event 4.1" />
+								<p:menuitem value="Event 4.2" />
+							</p:submenu>
+						</p:column>
+					</p:submenu>
 
-            <p:submenu label="Settings" icon="pi pi-fw pi-cog">
-                <p:column>
-                    <p:submenu label="Setting 1">
-                        <p:menuitem value="Setting 1.1"/>
-                        <p:menuitem value="Setting 1.2"/>
-                    </p:submenu>
-                    <p:submenu label="Setting 2">
-                        <p:menuitem value="Setting 2.1"/>
-                        <p:menuitem value="Setting 2.2"/>
-                    </p:submenu>
-                    <p:submenu label="Setting 3">
-                        <p:menuitem value="Setting 3.1"/>
-                        <p:menuitem value="Setting 3.2"/>
-                    </p:submenu>
-                </p:column>
+					<p:submenu label="Settings" icon="pi pi-fw pi-cog">
+						<p:column>
+							<p:submenu label="Setting 1">
+								<p:menuitem value="Setting 1.1" />
+								<p:menuitem value="Setting 1.2" />
+							</p:submenu>
+							<p:submenu label="Setting 2">
+								<p:menuitem value="Setting 2.1" />
+								<p:menuitem value="Setting 2.2" />
+							</p:submenu>
+							<p:submenu label="Setting 3">
+								<p:menuitem value="Setting 3.1" />
+								<p:menuitem value="Setting 3.2" />
+							</p:submenu>
+						</p:column>
 
-                <p:column>
-                    <p:submenu label="Setting 4">
-                        <p:menuitem value="Setting 4.1"/>
-                        <p:menuitem value="Setting 4.2"/>
-                    </p:submenu>
-                </p:column>
-            </p:submenu>
-        </p:megaMenu>
+						<p:column>
+							<p:submenu label="Setting 4">
+								<p:menuitem value="Setting 4.1" />
+								<p:menuitem value="Setting 4.2" />
+							</p:submenu>
+						</p:column>
 
-        <h5>Vertical</h5>
-        <p:megaMenu orientation="vertical" autoDisplay="false">
-            <p:submenu label="Videos" icon="pi pi-fw pi-video">
-                <p:column>
-                    <p:submenu label="Video 1">
-                        <p:menuitem value="Video 1.1"/>
-                        <p:menuitem value="Video 1.2"/>
-                    </p:submenu>
-                    <p:submenu label="Video 2">
-                        <p:menuitem value="Video 2.1"/>
-                        <p:menuitem value="Video 2.2"/>
-                    </p:submenu>
-                </p:column>
+					</p:submenu>
+				
+				</p:megaMenu>
 
-                <p:column>
-                    <p:submenu label="Video 3">
-                        <p:menuitem value="Video 3.1"/>
-                        <p:menuitem value="Video 3.2"/>
-                    </p:submenu>
-                    <p:submenu label="Video 4">
-                        <p:menuitem value="Video 4.1"/>
-                        <p:menuitem value="Video 4.2"/>
-                    </p:submenu>
-                </p:column>
-            </p:submenu>
 
-            <p:submenu label="Users" icon="pi pi-fw pi-users">
 
-                <p:column>
-                    <p:submenu label="User 1">
-                        <p:menuitem value="User 1.1"/>
-                        <p:menuitem value="User 1.2" url="#"/>
-                    </p:submenu>
-                    <p:submenu label="User 2">
-                        <p:menuitem value="User 2.1" url="#"/>
-                        <p:menuitem value="User 2.2" url="#"/>
-                    </p:submenu>
-                </p:column>
+				<p:tabMenu activeIndex="#{param.i}" style="width:15rem"
+					orientation="left">
+					<p:menuitem value="Home" outcome="livro" icon="pi pi-fw pi-home">
+						<f:param name="i" value="0" />
+					</p:menuitem>
+					<p:menuitem value="Calendar" icon="pi pi-fw pi-calendar">
+						<f:param name="i" value="1" />
+					</p:menuitem>
+					<p:menuitem value="Edit" icon="pi pi-fw pi-pencil" disabled="true">
+						<f:param name="i" value="2" />
+					</p:menuitem>
+					<p:menuitem value="Documentation" icon="pi pi-fw pi-file">
+						<f:param name="i" value="3" />
+					</p:menuitem>
+					<p:menuitem value="Settings" icon="pi pi-fw pi-cog">
 
-                <p:column>
-                    <p:submenu label="User 3">
-                        <p:menuitem value="User 3.1" url="#"/>
-                        <p:menuitem value="User 3.2" url="#"/>
-                    </p:submenu>
-                    <p:submenu label="User 4">
-                        <p:menuitem value="User 4.1" url="#"/>
-                        <p:menuitem value="User 4.2" url="#"/>
-                    </p:submenu>
-                </p:column>
-                <p:column>
-                    <p:submenu label="User 5">
-                        <p:menuitem value="User 5.1" url="#"/>
-                        <p:menuitem value="User 5.2" url="#"/>
-                    </p:submenu>
-                    <p:submenu label="User 6">
-                        <p:menuitem value="User 6.1" url="#"/>
-                        <p:menuitem value="User 6.2" url="#"/>
-                    </p:submenu>
-                </p:column>
-            </p:submenu>
+						<f:param name="i" value="4" />
+					</p:menuitem>
+					<p:commandButton>
 
-            <p:submenu label="Events" icon="pi pi-fw pi-calendar">
-                <p:column>
-                    <p:submenu label="Event 1">
-                        <p:menuitem value="Event 1.1" url="#"/>
-                        <p:menuitem value="Event 1.2" url="#"/>
-                    </p:submenu>
-                    <p:submenu label="Event 2">
-                        <p:menuitem value="Event 2.1" url="#"/>
-                        <p:menuitem value="Event 2.2" url="#"/>
-                    </p:submenu>
-                </p:column>
+					</p:commandButton>
 
-                <p:column>
-                    <p:submenu label="Event 3">
-                        <p:menuitem value="Event 3.1" url="#"/>
-                        <p:menuitem value="Event 3.2" url="#"/>
-                    </p:submenu>
-                    <p:submenu label="Event 4">
-                        <p:menuitem value="Event 4.1" url="#"/>
-                        <p:menuitem value="Event 4.2" url="#"/>
-                    </p:submenu>
-                </p:column>
-            </p:submenu>
+				</p:tabMenu>
 
-            <p:submenu label="Settings" icon="pi pi-fw pi-cog">
-                <p:column>
-                    <p:submenu label="Setting 1">
-                        <p:menuitem value="Setting 1.1" url="#"/>
-                        <p:menuitem value="Setting 1.2" url="#"/>
-                    </p:submenu>
-                    <p:submenu label="Setting 2">
-                        <p:menuitem value="Setting 2.1" url="#"/>
-                        <p:menuitem value="Setting 2.2" url="#"/>
-                    </p:submenu>
-                    <p:submenu label="Setting 3">
-                        <p:menuitem value="Setting 3.1" url="#"/>
-                        <p:menuitem value="Setting 3.2" url="#"/>
-                    </p:submenu>
-                </p:column>
 
-                <p:column>
-                    <p:submenu label="Setting 4">
-                        <p:menuitem value="Setting 4.1" url="#"/>
-                        <p:menuitem value="Setting 4.2" url="#"/>
-                    </p:submenu>
-                </p:column>
-            </p:submenu>
-        </p:megaMenu>
-    </h:form>
-</div>
 
-		
+
+
+
+			</h:form>
+		</div>
+
+
 	</ui:define>
 </ui:composition>
 </html>
